--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+
+# Generated directories
+bin/
+build/
+
+# Exceptions for premake executables
+!premake/windows/premake5.exe
